Fix text alignment for card body

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body, .album {
   background-color: #fcfccc;
   border: 2px solid black;
   height: 100%;
+  justify-content: space-between;
 }
 
 .card-body {
@@ -132,9 +133,9 @@ body, .album {
 }
 
 .fish-location {
+  flex:1 1 auto;
   padding: 1rem;
   text-align: center;
-  flex: 0 1 auto;
   border-top: 2px solid black;
 }
 
